# EDA1

./: README.md
practicas/0-repaso/: CMakeLists.txt  repaso.c
practicas/0-repaso/tests/: test_01_donde_esta_el_punto.c  test_04_jugadores.c  test_05_proceso_archivo.c  test_06_viviendas.c
practicas/1-recursividad/: CMakeLists.txt  CORRECCIONES-TP-RUTA-RESCATE.md  CORRECCIONES.md  recursividad.c  recursividad.h  ruta_mina.c
practicas/1-recursividad/archivos/: prueba1_entrada.txt  prueba1_salida_esperada.txt  prueba2_entrada.txt  prueba2_salida_esperada.txt  prueba3_entrada.txt  prueba3_salida_esperada.txt  prueba4_entrada.txt  prueba4_salida_esperada.txt
practicas/1-recursividad/tests/: test_capicua.c  test_divisible_por_7.c  test_explosion.c  test_fibonacci.c  test_mafia_china.c  test_onda_digital.c  test_palindromos.c  test_producto.c  test_separador_miles.c  test_tp_ruta_mina.c
practicas/2-tads/: CMakeLists.txt  fecha-juliano.c  numero-racional.c
practicas/2-tads/tests/: test_fecha.c  test_racional.c
practicas/3-listas/: CMakeLists.txt  CORRECCIONES.md  practica_listas.c
practicas/3-listas/tests/: test_comparacion_de_listas.c  test_dato_maximo.c  test_invertir_lista.c  test_lista_azar.c  test_lista_es_multiplo.c  test_lista_multiplo_escalar.c  test_lista_reflejada.c  test_menor_datos.c  test_polinomio.c  test_promedio_lista.c  test_subconjuntos_suman_n.c  test_sublistas.c
practicas/4-pilas/: CMakeLists.txt  CORRECCIONES.md  practica_pilas.c  practica_pilas.h
practicas/4-pilas/tests/: test_01_buscar_elemento.c  test_02_insertar_elemento.c  test_03_eliminar_elemento.c  test_04_intercambiar_elementos.c  test_05_copiar_pila.c  test_06_contar_elementos.c  test_07_comparar_pilas.c  test_08_cambio_base.c  test_09_invertir_pila.c  test_10_eliminar_todas_ocurrencias.c  test_12_eliminar_repetidos.c
practicas/5-colas/: CMakeLists.txt  practica_colas.c
practicas/5-colas/tests/: test_colas_01_buscar_elemento.c  test_colas_02_colarse.c  test_colas_03_eliminar_elemento.c  test_colas_04_contar_elementos.c  test_colas_05_duplicado.c  test_colas_06_invertir.c  test_colas_07_comparar.c  test_colas_08_mismos_elementos.c  test_colas_09_unicos.c  test_colas_10_divisores.c  test_colas_11_repetidos.c  test_colas_12_atencion_cliente.c
practicas/6-arboles/: CMakeLists.txt  practica_arboles.c
practicas/6-arboles/tests/: test_arboles_16_recorrido_anchura.c  test_comparar_ab_avl.c  test_in_order_iterativo.c
practicas/7-tabla-hash/: CMakeLists.txt  practica_tablas_hash.c  practica_tablas_hash.h
practicas/7-tabla-hash/tests/: tablas_hash_vs_arboles_avl.c  test_tabla_hash_01_entendiendo.c  test_tabla_hash_02_comparando.c
practicas/8-conjuntos/: CMakeLists.txt
tads/: CMakeLists.txt
tads/arboles/: arbol-avl.c  arbol-avl.h  arbol-binario-busqueda.c  arbol-binario-busqueda.h  arbol-binario.c  arbol-binario.h  nodo.c  nodo.h  util_arboles.c  util_arboles.h
tads/colas/: aserciones_colas.c  aserciones_colas.h  colas.h  colas_arreglos.c  colas_arreglos_circular.c  colas_punteros.c  util_colas.c  util_colas.h
tads/conjuntos/: conjuntos-avl.c  conjuntos.h
tads/listas/: aserciones_listas.c  aserciones_listas.h  listas.h  listas_arreglos.c  listas_cursores.c  listas_punteros.c  util_listas.c  util_listas.h
tads/pilas/: aserciones_pilas.c  aserciones_pilas.h  pilas.h  pilas_arreglos.c  pilas_punteros.c  util_pilas.c  util_pilas.h
tads/tabla-hash/: tabla-hash-lista-colisiones.c  tabla-hash-zona-overflow.c  tabla-hash.h
tads/tipo_elemento/: aserciones_tipo_elemento.c  aserciones_tipo_elemento.h  tipo_elemento.c
utilidades/: CMakeLists.txt  aserciones.c  aserciones.h  cadenas.c
